--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>WebSocket Audio Recorder</title>
 </head>
+
 <body>
     <h1>WebSocket Audio Recorder</h1>
     <button id="startRecord">Start Recording</button>
     <button id="stopRecord" disabled>Stop Recording</button>
+    <button id="closeWs" disabled>Close WebSocket Server</button>
     <script>
         const ws = new WebSocket("ws://localhost:3001/ws");
         let mediaRecorder;
@@ -16,29 +19,45 @@
             console.log("Connected to the WebSocket server");
         };
 
-        document.querySelector("#startRecord").addEventListener("click", function() {
+        document.querySelector("#startRecord").addEventListener("click", function () {
             navigator.mediaDevices.getUserMedia({ audio: true })
-            .then(stream => {
-                mediaRecorder = new MediaRecorder(stream);
-                mediaRecorder.ondataavailable = event => {
-                    audioChunks.push(event.data);
-                };
-                mediaRecorder.onstop = () => {
-                    const audioBlob = new Blob(audioChunks, { type: "audio/wav" });
-                    ws.send(audioBlob);
+                .then(stream => {
+                    mediaRecorder = new MediaRecorder(stream);
                     audioChunks = [];
-                };
-                mediaRecorder.start();
-                document.querySelector("#startRecord").disabled = true;
-                document.querySelector("#stopRecord").disabled = false;
-            });
+
+                    mediaRecorder.ondataavailable = event => {
+                        audioChunks.push(event.data);
+                        if (mediaRecorder.state === "recording") {
+                            const audioBlob = new Blob(audioChunks, { type: "audio/wav" });
+                            console.log("audioBlob: ", audioBlob);
+                            ws.send(audioBlob);
+                            audioChunks = [];
+                            console.log("Sent the audio to the WebSocket server");
+                        }
+                    };
+
+                    // Start recording and generate data every 5 seconds
+                    mediaRecorder.start(5000);
+
+                    document.querySelector("#startRecord").disabled = true;
+                    document.querySelector("#stopRecord").disabled = false;
+                    document.querySelector("#closeWs").disabled = false;
+                });
         });
 
-        document.querySelector("#stopRecord").addEventListener("click", function() {
+        document.querySelector("#stopRecord").addEventListener("click", function () {
             mediaRecorder.stop();
             document.querySelector("#startRecord").disabled = false;
             document.querySelector("#stopRecord").disabled = true;
         });
+        
+        document.querySelector("#closeWs").addEventListener("click", function () {
+            mediaRecorder.stop();
+            ws.close();
+            document.querySelector("#startRecord").disabled = false;
+            document.querySelector("#closeWs").disabled = true;
+        });
     </script>
 </body>
+
 </html>
