--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,7 @@
         padding: 10px;
         margin-top: 10px;
         border-radius: 10px 10px;
-        height: 400px;
+        min-height: 400px;
     }
 
     .resultBox .head {
