--- a/static/index.html
+++ b/static/index.html
@@ -76,6 +76,10 @@
             </div>
         </div>
         <div class="resultBox">
+            <div class="head">英文</div>
+            <div id="transcribe"></div>
+        </div>
+        <div class="resultBox">
             <div class="head">翻訳結果</div>
             <div id="result"></div>
         </div>
